[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/Todot/Assets/ChecklistFilled.svg" type="Texture" id=1]
[ext_resource path="res://addons/Todot/Src/Title/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/Todot/Src/Checklist/Checklist.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.647059, 0.937255, 0.67451, 1 )

[node name="Checklist" type="VBoxContainer" groups=["Checklist"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Box" type="VBoxContainer" parent="."]
unique_name_in_owner = true
margin_right = 1024.0
margin_bottom = 42.0

[node name="TitleBox" type="HBoxContainer" parent="Box"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="TodoIcon" type="TextureRect" parent="Box/TitleBox"]
margin_right = 24.0
margin_bottom = 24.0
texture = ExtResource( 1 )

[node name="Title" parent="Box/TitleBox" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_left = 28.0
margin_right = 1001.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
drag_item = NodePath("../../..")
drag_y = true

[node name="Button" type="Button" parent="Box/TitleBox"]
margin_left = 1005.0
margin_right = 1024.0
margin_bottom = 24.0
text = "x"
flat = true

[node name="Progress" type="HBoxContainer" parent="Box"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 42.0

[node name="ProgressLabel" type="Label" parent="Box/Progress"]
unique_name_in_owner = true
margin_right = 20.0
margin_bottom = 14.0
text = "0%"

[node name="ProgressBar" type="ProgressBar" parent="Box/Progress"]
unique_name_in_owner = true
margin_left = 24.0
margin_top = 4.0
margin_right = 1024.0
margin_bottom = 9.0
rect_min_size = Vector2( 0, 5 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/fg = SubResource( 1 )
percent_visible = false

[node name="CheckitemContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
margin_top = 46.0
margin_right = 1024.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="AddCheckitem" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 50.0
margin_right = 90.0
margin_bottom = 70.0
size_flags_horizontal = 0
text = "Add an item"

[node name="AddItemBox" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
margin_top = 74.0
margin_right = 1024.0
margin_bottom = 122.0

[node name="AddItemEdit" type="LineEdit" parent="AddItemBox"]
unique_name_in_owner = true
margin_right = 1024.0
margin_bottom = 24.0
placeholder_text = "Title..."

[node name="HBox" type="HBoxContainer" parent="AddItemBox"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 48.0

[node name="AddItemButton" type="Button" parent="AddItemBox/HBox"]
margin_right = 71.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "Add item"

[node name="CancleButton" type="Button" parent="AddItemBox/HBox"]
margin_left = 75.0
margin_right = 94.0
margin_bottom = 20.0
text = "x"
flat = true

[connection signal="drag_end" from="Box/TitleBox/Title" to="." method="emit_signal" binds= [ "drag_end" ]]
[connection signal="drag_start" from="Box/TitleBox/Title" to="." method="emit_drag"]
[connection signal="pressed" from="AddCheckitem" to="AddCheckitem" method="hide"]
[connection signal="pressed" from="AddCheckitem" to="AddItemBox" method="show"]
[connection signal="pressed" from="AddCheckitem" to="AddItemBox/AddItemEdit" method="grab_focus"]
[connection signal="text_entered" from="AddItemBox/AddItemEdit" to="." method="add_checkitem"]
[connection signal="pressed" from="AddItemBox/HBox/AddItemButton" to="." method="add_checkitem"]
[connection signal="pressed" from="AddItemBox/HBox/AddItemButton" to="AddItemBox/AddItemEdit" method="grab_focus"]
[connection signal="pressed" from="AddItemBox/HBox/AddItemButton" to="AddItemBox/AddItemEdit" method="set_text" binds= [ "" ]]
[connection signal="pressed" from="AddItemBox/HBox/CancleButton" to="AddCheckitem" method="show"]
[connection signal="pressed" from="AddItemBox/HBox/CancleButton" to="AddItemBox" method="hide"]
[connection signal="pressed" from="AddItemBox/HBox/CancleButton" to="AddItemBox/AddItemEdit" method="set_text" binds= [ "" ]]
